2007-05-22	Benedikt Meurer <benny@xfce.org>

	* configure.in.in, exo/exo-string.{c,h}, exo/exo.symbols: Add new
	  function exo_strdup_strftime(), which is an UTF-8 aware wrapper
	  for strftime().
	* docs/reference/: Update reference manual.

2007-05-22	Benedikt Meurer <benny@xfce.org>

	* configure.in.in: Prefer -lmd over -lmd5.
	* docs/reference/: Update reference manual.

2007-05-20	Benedikt Meurer <benny@xfce.org>

	* exo-csource/main.c: Add support to strip comments and node contents
	  from XML files. Based on patch from Nick Schermer <nick@xfce.org>.
	  Bug #3094.
	* po/*.po, po/*.pot: Merge new strings.
	* po/de.po: Update german translations.

2007-05-09	Benedikt Meurer <benny@xfce.org>

	* INSTALL, configure.in.in: Update for latest autoconf.

2007-05-09	Benedikt Meurer <benny@xfce.org>

	* COPYING.LIB, COPYING, Makefile.am: Ship LGPL and GPL license
	  files. Bug #2895.

2007-02-17	Benedikt Meurer <benny@xfce.org>

	* exo/exo-config.h.in: Make sure EXO_PARAM_READABLE,
	  EXO_PARAM_WRITABLE and EXO_PARAM_READWRITE are properly set.

2007-02-12	Benedikt Meurer <benny@xfce.org>

	* exo/exo-mount-point.c: Fix compilation on Solaris 2.8. Bug #2798.

2007-02-12	Benedikt Meurer <benny@xfce.org>

	* configure.in.in, exo/exo-mount-point.c: Fix compilation on newer
	  NetBSD versions. Bug #2808.

2007-02-12	Benedikt Meurer <benny@xfce.org>

	* exo-helper/helpers/sylpheed-claws.desktop.in.in: Apply patch from
	  Colin Leroy <colin@colino.net> to replace Sylpheed-Claws with Claws
	  Mail. Bug #2851.
	* po/libexo-0.3.pot, po/*.po: Merge new strings.

2007-01-28	Benedikt Meurer <benny@xfce.org>

	* exo/exo-url.c(exo_url_show_on_screen): Apply patch from Peter de
	  Ridder <pc.ridder@zonnet.nl> to quote URLs properly prior to
	  passing them to external programs. Bug #2791.

2007-01-28	Benedikt Meurer <benny@xfce.org>

	* configure.in.in: Bump required HAL version to 0.5.7. Bug #2828.

2007-01-20	Benedikt Meurer <benny@xfce.org>
